@@ -1,11 +1,13 @@
 package gov.cdc.nbs.questionbank.page.summary.search;
 
 import com.querydsl.core.Tuple;
+import gov.cdc.nbs.questionbank.page.PageStatusResolver;
 import gov.cdc.nbs.questionbank.question.model.ConditionSummary;
 
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.ZoneId;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -19,7 +21,10 @@ class PageSummaryMapper {
 
   PageSummary map(final Tuple tuple) {
     long identifier = Objects.requireNonNull(tuple.get(this.tables.page().id), "A Page Summary ID is required.");
-    List<ConditionSummary> conditions = List.of(asCondition(tuple));
+    List<ConditionSummary> conditions = Arrays.asList(asCondition(tuple))
+        .stream()
+        .filter(Objects::nonNull)
+        .toList();
     PageSummary.EventType eventType = getEventType(tuple);
 
     String lastUpdateBy = tuple.get(this.tables.lastUpdatedBy());
@@ -33,15 +38,16 @@ class PageSummaryMapper {
         getStatus(tuple),
         conditions,
         lastUpdateDate,
-        lastUpdateBy
-    );
+        lastUpdateBy);
   }
 
   private ConditionSummary asCondition(final Tuple tuple) {
+    if (tuple.get(this.tables.condition().id) == null) {
+      return null;
+    }
     return new ConditionSummary(
         tuple.get(this.tables.condition().id),
-        tuple.get(this.tables.condition().conditionShortNm)
-    );
+        tuple.get(this.tables.condition().conditionShortNm));
   }
 
   /**
@@ -53,14 +59,7 @@ class PageSummaryMapper {
   private String getStatus(final Tuple tuple) {
     String templateType = tuple.get(this.tables.page().templateType);
     Integer publishVersion = tuple.get(this.tables.page().publishVersionNbr);
-    if ("Draft".equalsIgnoreCase(templateType)) {
-      if (publishVersion == null) {
-        return "Initial Draft";
-      } else {
-        return "Published with Draft";
-      }
-    }
-    return templateType;
+    return PageStatusResolver.resolve(templateType, publishVersion);
   }
 
   private PageSummary.EventType getEventType(final Tuple tuple) {
